# nomad-aitoolkit

./: .cruft.json  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yml  docs.yml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
notebooks/: PropaneOxidation.archive.json  analytics-atomic-features.archive.json  analytics-clustering-tutorial.archive.json  analytics-cmlkit.archive.json  analytics-co2-sgd-tutorial.archive.json  analytics-compressed-sensing.archive.json  analytics-convolutional-nn.archive.json  analytics-decision-tree.archive.json  analytics-descriptor-role.archive.json  analytics-domain-of-applicability.archive.json  analytics-dos-similarity-search.archive.json  analytics-error-estimates.archive.json  analytics-exploratory-analysis.archive.json  analytics-gap-si-surface.archive.json  analytics-grain-boundaries.archive.json  analytics-hierarchical-sisso.archive.json  analytics-kaggle-competition.archive.json  analytics-kappa_L_learning.archive.json  analytics-krr4mat.archive.json  analytics-metalinsulator-prm2018.archive.json  analytics-perovskite-tolerance-factor.archive.json  analytics-query-nomad-archive.archive.json  analytics-sgd-alloys-oxygen-reduction-evolution.archive.json  analytics-sgd-propylene-oxidation-hte.archive.json  analytics-soap-atomic-charges.archive.json  analytics-svm_classification.archive.json  analytics-tcmi.archive.json  analytics-tetradymite-PRM2020.archive.json  analytics-tutorial-template.archive.json  arise.archive.json  atomic-features.archive.json  clustering-tutorial.archive.json  cmlkit.archive.json  co2-sgd-tutorial.archive.json  compressed-sensing.archive.json  convolutional-nn.archive.json  decision-tree.archive.json  descriptor-role.archive.json  domain-of-applicability.archive.json  dos-similarity-search.archive.json  (+18 more)
reference/: references.html
search/: search_index.json
src/nomad_aitoolkit/: __init__.py
src/nomad_aitoolkit/apps/: __init__.py
src/nomad_aitoolkit/normalizers/: __init__.py  mynormalizer.py
src/nomad_aitoolkit/schema/: __init__.py  package.py
src/nomad_aitoolkit/schema_packages/: __init__.py  mypackage.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tutorial/: tutorial.html
